# garmin-workout

./: README.md  main.py  pyproject.toml  requirements.txt  system_prompt.txt  wahoo_to_garmin_converter.py  workout_helpers.py
