[project]
name = "wahoo-garmin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.28",
    "garminconnect>=0.2.38",
    "garth>=0.5.21",
    "pydantic>=2.12.5",
    "readchar>=4.2.1",
    "requests>=2.32.5",
    "strands-agents>=1.22.0",
    "strands-agents-tools>=0.2.19",
]
